@@ -931,6 +931,10 @@ to follow location: headers.
 .B http_code
 The numerical code that was found in the last retrieved HTTP(S) page.
 .TP
+.B http_connect
+The numerical code that was found in the last response (from a proxy) to a
+curl CONNECT request. (Added in 7.12.4)
+.TP
 .B time_total
 The total time, in seconds, that the full operation lasted. The time will be
 displayed with millisecond resolution.
