@@ -7,6 +7,14 @@
                                   Changelog
 
 
+Daniel (21 December 2004)
+- Added test case 217 that verified CURLINFO_HTTP_CONNECTCODE, and I made the
+  -w option support 'http_connect' to make it easier to verify!
+
+- Fixed lib/select.c include order to build fine on FreeBSD
+
+- Fixed failf()'s reuse of the va_list variable that crashed on FreeBSD.
+
 Version 7.12.3 (20 December 2004)
 
 Daniel (19 December 2004)
